--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ button:hover {
 @media (max-width: 768px) {
   .opciones {
     flex-direction: row;
+    height: 40%;
     gap: 1rem;
     align-items: center;
     margin-bottom: 600px;
@@ -57,3 +58,23 @@ button:hover {
 }
 
 
+@media (max-width: 420px) {
+  .app {
+    padding: 1rem; /* por si algún contenido se ajusta al borde */
+  }
+
+  .opciones {
+    flex-direction: row;   /* uno encima del otro */
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 350px;     /* menos espacio en móviles chicos */
+  }
+
+  button {
+    font-size: 1rem;
+    top: 300px;
+    padding: 0.75rem 1.5rem;
+    width: 100%;              /* que ocupen todo el ancho disponible */
+    max-width: 280px;         /* pero no exagerado */
+  }
+}
