--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,30 @@
 
 
 
+.logo-con-texto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.logo-icono {
+  width: 50px;
+  height: 30px;
+  object-fit: contain;
+  margin-bottom: 2px;
+}
+
+.logo-etiqueta {
+  font-size: 10px;
+  color: white;
+  text-align: center;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+
 
 @media (max-width: 768px) {
   .opciones {
