--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,8 @@
 .opciones {
   z-index: 1;
   display: flex;
-  gap: 5rem;
-  margin-bottom: 500px;
+  gap: 10rem;
+  margin-bottom: 400px;
   flex-direction: row;
   align-items: start;
 }
@@ -49,6 +49,15 @@
   align-items: center;
   justify-content: center;
   gap: 5px;
+}
+
+
+.precio-modal {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #000;
+  margin-bottom: 1rem;
+  text-align: center;
 }
 
 .logo-icono {
