--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ h1{
   z-index: 1;
   display: flex;
   gap: 15rem;
-  margin-bottom: 350px;
+  margin-bottom: 25%;
   flex-direction: row;
   align-items: start;
 }
@@ -74,7 +74,7 @@ h1{
 
 
 .precio-modal {
-  font-size: 1.2rem;
+  font-size: 2.1rem;
   font-weight: bold;
   color: #000;
   margin-bottom: 1rem;
@@ -82,17 +82,16 @@ h1{
 }
 
 .logo-icono {
-  width: 50px;
-  height: 30px;
+  width: 100px;
+  height: 20px;
   object-fit: contain;
-  margin: 2px;
 }
 
 .logo-etiqueta {
   font-size: 10px;
   color: white;
   text-align: center;
-  font-weight: 500;
+  font-weight: 300;
   text-transform: capitalize;
 }
 
