--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@ h1{
 @media (max-width: 768px) {
   .opciones {
     flex-direction: row;
-    height: 30%;
+    height: 40%;
     gap: 1rem;
     align-items: center;
     margin-bottom: 
@@ -108,10 +108,24 @@ h1{
   }
 }
 
+  h1{
+    font-size: 4rem;
+    display: flex;
+
+    flex-direction: row;
+  }
+
 
 @media (max-width: 420px) {
   .app {
     padding: 1rem; /* por si algún contenido se ajusta al borde */
+  }
+
+  h1{
+    font-size: 2rem;
+    display: flex;
+
+    flex-direction: row;
   }
 
   .opciones {
