--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -18,8 +18,8 @@
   border-radius: 12px;
   position: relative;
   color: rgb(29, 25, 25);
-  width: 800px;
-  height: 500px;
+  width: 700px;
+  height: 550px;
   text-align: center;
   box-shadow: 0 0 20px #000;
   
@@ -33,7 +33,7 @@
   justify-content: center;
   gap: 1rem; /* Espacio entre imágenes */
   padding: 1rem;
-  max-height: 400px;
+  max-height: 450px;
   overflow-y: auto ;
   scrollbar-width: none;
 }
@@ -44,7 +44,7 @@
 
 .imagen-modal {
   width: 500px;
-  height: 100%;
+  height: 90%;
   object-fit: cover; /* Mantiene proporciones sin deformar */
   margin-bottom: 30%;
   cursor: pointer;
@@ -67,11 +67,11 @@
 
 @keyframes modalDerecha {
   from {
-    transform: translateX(100%) ;
+    transform: translateX(100%) scale(0.1);
     opacity: 0;
   }
   to {
-    transform: translateX(0%) ;
+    transform: translateX(0%) scale(1);
     opacity: 1;
   }
 }
@@ -82,7 +82,7 @@
 
 @keyframes modalIzquierda {
   from {
-    transform: translateX(-100%) scale(0.9);
+    transform: translateX(-100%) scale(0.1);
     opacity: 0;
   }
   to {
@@ -168,11 +168,18 @@
   position:absolute;
   width: 12px;
   top: 0.10rem;
- left: 30%;
+  left: 30%;
   background: none;
   border: none;
   color: #f00;
   font-size: 1.1rem;
   cursor: pointer;
+  }
+
+    .modal-content {
+    width: 90%;
+    height: 50%;
+    padding: 1rem;
+    font-size: 0.9rem;
   }
 }
