--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,9 @@
 
 h1{
   border-radius: 30% #0005;
-  font-size: 80px;
   margin:  15px;
-  color: steelblue;
-  animation: pasar 10s infinite ease-in-out;
+  font-weight: 900;
+  color: #0009;
 }
 
 
