--- a/src/App.css
+++ b/src/App.css
@@ -102,14 +102,15 @@ h1{
   }
 
 
-@media (max-width: 350px) {
+@media (max-width: 420px) {
   .app {
     padding: 1rem; /* por si algún contenido se ajusta al borde */
   }
 
   h1{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  text-align: center;
   }
 
   .opciones {
