--- a/src/App.css
+++ b/src/App.css
@@ -62,9 +62,10 @@ h1{
 .precio-modal {
   font-size: 2.1rem;
   font-weight: bold;
-  color: #000;
+  background: #003;color: #f00;
   margin-bottom: 1rem;
   text-align: center;
+  border-radius: 20px;
 }
 
 .logo-icono {
