--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -4,7 +4,7 @@
   left: 0;
   height: 100vh;
   width: 100vw;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color:transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,15 +13,13 @@
 
 .modal-content {
   overflow: hidden;
-  background-color: #fff9;
+  background-color: transparent;
   padding: 2rem;
   border-radius: 12px;
   position: relative;
-  color: rgb(29, 25, 25);
   width: 700px;
   height: 550px;
   text-align: center;
-  box-shadow: 0 0 20px #000;
   
 }
 
