--- a/src/components/Timon.css
+++ b/src/components/Timon.css
@@ -1,10 +1,10 @@
 .timon-container {
     position: absolute;
-    top: 85%;
+    top: 10%;
     left: 50%;
-    height:80%;
+    height:100%;
     z-index: 1;
-    transform: translateX(-50%);
+  
     pointer-events: none;
     overflow-y: hidden;
     animation: aparecer 2s  ease;
@@ -44,7 +44,7 @@
   }
 }
 
-@media (max-width: 420px) {
+@media (min-width: 420px) {
   .timon-img {
     width: 90%;
     height: 50%;
@@ -55,7 +55,7 @@
   .timon-container {
     top: 100%;
   }
-}
+
  @keyframes aparecer {
   0% {
     transform: translate(-50%, 200px);
@@ -65,4 +65,5 @@
     transform: translate(-50%, -50%);  
    opacity: 1;
   }
+}
 }
