--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -135,7 +135,7 @@
 @media (max-width: 768px) {
   .modal-content {
     width: 90%;
-    height: 50%;
+    height: 70%;
     padding: 1rem;
     font-size: 0.9rem;
   }
@@ -146,6 +146,12 @@
     bottom: -5px;
   }
 
+
+  h1{
+    text-align: center;
+    font-weight: 10px;
+    margin: 0;
+  }
 
   .cerrar{
   position:absolute;
