--- a/src/App.css
+++ b/src/App.css
@@ -90,15 +90,13 @@ h1{
     height: 40%;
     gap: 1rem;
     align-items: center;
-    margin-bottom: 
-    400px;
+    margin-bottom: 400px;
   }
 }
 
   h1{
     font-size: 4rem;
     display: flex;
-
     flex-direction: row;
   }
 
