--- a/src/components/EngineButton.css
+++ b/src/components/EngineButton.css
@@ -2,7 +2,7 @@
   background-color: #0464;
   color: white;
   border: 2px solid black;
-  padding: 1rem 2rem;
+  padding: .2rem ;
   font-size: 1.2rem;
   border-radius: 0.6rem;
   cursor: pointer;
