--- a/src/components/PodioIntro.css
+++ b/src/components/PodioIntro.css
@@ -10,7 +10,7 @@
   overflow: hidden;
 }
 
-button {
+.btn{
   font-size: 1.2rem;
   padding: 0.75rem 2rem;
   background-color: gold;
@@ -21,6 +21,6 @@ button {
   transition: transform 0.3s ease;
 }
 
-button:hover {
+.btn:hover {
   transform: scale(1.1);
 }
