--- a/src/components/PodioIntro.css
+++ b/src/components/PodioIntro.css
@@ -11,14 +11,16 @@
 }
 
 .btn{
+  position: relative;
   font-size: 1.2rem;
   padding: 0.75rem 2rem;
   background-color: gold;
   color: black;
+  left: 40%;
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  transition: transform 0.3s ease;
+  transition: transform 5s ease;
 }
 
 .btn:hover {
