--- a/src/components/EngineButton.css
+++ b/src/components/EngineButton.css
@@ -15,9 +15,14 @@
   color: chocolate;
 }
 
+  
+
+
+
 @media (max-width: 768px) {
   .engine-button {
     font-size: 1rem;
     padding: 0.1rem .5rem;
+    margin-bottom: 10%;
   }
 }
